c/examples/writing-a-c-compiler-tests/tests/chapter_14/valid/dereference/simple.c
/* A basic dereferencing test case */

int main(void) {
    int x = 3;
    int *ptr = &x;
    return *ptr;
}