c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/compound_divide_pointer.c
/* A pointer can't appear as the left or right operand
 * of the *=, /=, or %= operator
 */
int main(void) {
    int *x = 0;
    int *y = 0;
    x /= y;
    return 0;
}